--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,11 @@
     <div class='meme-playground'>
         <div id='memes-target' style='float:left;'></div>
         <div id='match-target' style='float:left;'></div>
+        <div id='novid' style='float:left;'>
+            <div style='position: relative'>
+                <span style='position: absolute; left: 40%; top: 100px;'>NO VID AVAILABLE</span>
+            </div>
+        </div>
     </div>
 </section>
 <!-- debug -->
